src/index.scss
/* ... */
.menu-bar .menu-item {
  margin: 10px 50px;
  cursor: pointer;
  transition: color 0.4s ease;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none
}

.menu-bar .menu-item:hover {
  color: $main-red;
}

a {
  color: $main-white;
  text-decoration: none;
}

.right-logos .search-btn,
.user-btn {
  width: 32px;
  cursor: pointer;
}

.user-btn {
  margin-left: 100px;
}

button {
  background-color: $main-red;
  color: $main-white;
  border: none;
  border-radius: 100;
  font-size: 16px;
  font-family: "Inter", sans-serif;
  font-weight: 600;
  padding: 22px 70px;
  cursor: pointer;
  transition: background-color 0.5s ease;
}

button:hover {
  background-color: #c71919;
}

.hero-container {
  position: relative;
  bottom: 110px;
  margin-bottom: -110px;
}

.hero-img {
  width: 100vw;
  max-width: 100%;
  height: auto;
  z-index: -1;
  opacity: 0.4;
  image-rendering: pixelated;
}

.hero-text {
  display: flex;
  position: absolute;
  top: 29%;
  padding: 0px 5%;
  width: 90%;
  max-width: 90%;
}

.left-hero,
.right-hero {
  flex: 1;
}

.left-hero {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex-grow: 2;
}

.hero-btns {
  display: flex;
  align-items: center;
  margin-top: 35px;
  gap: 15px;
}

.white-heart {
  cursor: pointer;
}

.right-hero {
  display: flex;
  justify-content: end;
}

.hero-duration {
  font-weight: 500;
  color: $subtle-gray;
  margin-bottom: 5px;
}

.hero-title {
  width: 36%;
}

.featured-star {
  width: 18px;
  align-self: baseline;
  margin-right: 6px;
}

h1 {
  font-size: 40px;
  margin: 20px 0;
}

.hero-desc {
  width: 48%;
  color: $subtle-gray;
}

h2 {
  font-size: 32px;
  margin: 0;
  margin-bottom: 5px;
  font-weight: 600;
}

.movie-heading-container {
  padding: 4% 5% 0 5%;
}

.line {
  margin: 20px 0;
  border-top: $subtle-gray 1px solid;
}

.movie-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  position: relative;
}

.grid-poster {
  aspect-ratio: 2 / 3;
  transition: filter 0.2s ease;
  width: 100%;
  height: 100%;
}

.grid-poster:hover {
  filter: blur(4px);
  cursor: pointer;
  transform: scale(1.02);
}

.grid-poster:hover + .hover-container {
  display: flex;
}

.hover-container {
  position: absolute;
  z-index: 1000;
  display: none;
  bottom: 50%;
  width: 100%;
  justify-content: center;
  pointer-events: none;
}

.hover-more-details {
  z-index: 1010;
  padding: 22px 60px;
}

.grid-overflow {
  aspect-ratio: 2 / 3;
  overflow: hidden;
  border-radius: 6px;
  width: 100%;
}

.grid {
  padding: 0 5%;
  display: grid;
  column-gap: 2%;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  row-gap: 1.7%;
}

.grid-genre-desc {
  font-weight: 500;
  color: $subtle-gray;
  padding-top: 5px;
}

.grid-movie-info {
  text-align: center;
}

.login-container {
  padding: 3% 5%;  
}

.login-heading {
  text-align: center;
}

.login-form-flexbox {
  display: flex;
  flex-direction: column;
  align-content: center;
  gap: 60px;
  width: 500px;
  margin: auto;
}

.form-labels-container {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

input[type="date" i] {
  // add responsive font size
  color: $subtle-gray;
  font-family: "Inter", sans-serif;
  font-size: 16px;
}

input {
  color-scheme: dark;
}

::-webkit-calendar-picker-indicator {
  cursor: pointer;
  scale: 1.4;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24' width='24'%3E%3Cg transform='translate(0 -1028.4)'%3E%3Cpath d='m5 1032.4c-1.1046 0-2 .9-2 2v14c0 1.1.8954 2 2 2h6 2 6c1.105 0 2-.9 2-2v-14c0-1.1-.895-2-2-2h-6-2z' fill='%23bdc3c7'/%3E%3Cpath d='m5 3c-1.1046 0-2 .8954-2 2v14c0 1.105.8954 2 2 2h6 2 6c1.105 0 2-.895 2-2v-14c0-1.1046-.895-2-2-2h-6-2z' fill='%23ecf0f1' transform='translate(0 1028.4)'/%3E%3Cpath d='m5 3c-1.1046 0-2 .8954-2 2v3 1h18v-1-3c0-1.1046-.895-2-2-2h-6-2z' fill='%23e74c3c' transform='translate(0 1028.4)'/%3E%3Cpath d='m7 5.5a1.5 1.5 0 1 1 -3 0 1.5 1.5 0 1 1 3 0z' fill='%23c0392b' transform='translate(.5 1028.4)'/%3E%3Cpath d='m7 5.5a1.5 1.5 0 1 1 -3 0 1.5 1.5 0 1 1 3 0z' fill='%23c0392b' transform='translate(12.5 1028.4)'/%3E%3Cg fill='%23bdc3c7'%3E%3Cpath d='m5 1039.4v2h2v-2zm3 0v2h2v-2zm3 0v2h2v-2zm3 0v2h2v-2zm3 0v2h2v-2z'/%3E%3Cpath d='m5 1042.4v2h2v-2zm3 0v2h2v-2zm3 0v2h2v-2zm3 0v2h2v-2zm3 0v2h2v-2z'/%3E%3Cpath d='m5 1045.4v2h2v-2zm3 0v2h2v-2zm3 0v2h2v-2zm3 0v2h2v-2zm3 0v2h2v-2z'/%3E%3C/g%3E%3Cpath d='m6 1c-.5523 0-1 .4477-1 1v3c0 .5523.4477 1 1 1s1-.4477 1-1v-3c0-.5523-.4477-1-1-1zm12 0c-.552 0-1 .4477-1 1v3c0 .5523.448 1 1 1s1-.4477 1-1v-3c0-.5523-.448-1-1-1z' fill='%2395a5a6' transform='translate(0 1028.4)'/%3E%3Cpath d='m6 1029.4c-.5523 0-1 .4-1 1v2h2v-2c0-.6-.4477-1-1-1zm12 0c-.552 0-1 .4-1 1v2h2v-2c0-.6-.448-1-1-1z' fill='%23bdc3c7'/%3E%3C/g%3E%3C/svg%3E");
}

.input-box {
  border-radius: 5px;
  background-color: $light-background;
  border: 0px;
  color: $subtle-gray;
  padding: 15px 14px;
  font-size: 16px;
}

.form-label-box {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.input-box:focus {
  border: 0px;
  outline: 1px solid $main-yellow;
  box-shadow: 0px 0px 5px 0px $main-yellow;
}

.password-input {
  background-image: url("./images/Lock.svg");
  background-repeat: no-repeat;
  background-position: right;
  background-position-x: 97%;
}

.login-button-container {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  gap: 15px
}

.login-signup-redirect {
  text-align: center;
  font-size: 15px;
  font-weight: 400;
}

.redirect-link {
  color: $main-yellow;
}

.banner-container {
  height: 600px;
  overflow: hidden;
  background-size: cover;
  background-position: top 20% right 50%;
  background-repeat: no-repeat;
  opacity: 0.4;
  position: relative;
  bottom: 110px;
  margin-bottom: -110px;
}

.movie-heading-margin {
  margin-top: 15px;
  margin-bottom: 15px;
}

.movie-info {
  padding: 40px 5% 120px 5%;
}
/* ... */

